--- a/app4_createApp/src/index.scss
+++ b/app4_createApp/src/index.scss
@@ -4,9 +4,23 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
   padding: 2rem;
+}
+
+.wrapper {
+  .header {
+    
+  }
+  .content {
+    .group {
+      p {
+        border: 1px solid #CCC;
+        //width: 100%;
+        height: 100px;
+        white-space: break-spaces;
+        word-break: break-all;
+        padding: 5px;
+      }
+    }
+  }
 }
