--- a/app5_createApp5/src/index.scss
+++ b/app5_createApp5/src/index.scss
@@ -4,14 +4,19 @@
 }
 
 body {
-  padding: 2rem;
+  
 }
 
 .wrapper {
+  position: "relative";
+  height: 100vh;
+
+  padding: 10px;
   .header {
-    
+    height: 50px;
   }
   .content {
+    height: 200px;
     .group {
       p {
         border: 1px solid #CCC;
@@ -22,5 +27,12 @@ body {
         padding: 5px;
       }
     }
+  }
+
+  .footer {
+    height: 50px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
   }
 }
